--- a/Frontend-Summarizer/about.html
+++ b/Frontend-Summarizer/about.html
@@ -5,67 +5,127 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About - Summarizer</title>
     <style>
-        body {
+        /* Reset and base */
+        * {
+          box-sizing: border-box;
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           margin: 0;
           padding: 0;
-          background: #f5f7fa;
-          color: #444;
         }
-        header {
-          background: #0078d7;
-          padding: 12px 0;
-          box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-          margin-bottom: 30px;
-        }
-        nav {
-          max-width: 700px;
-          margin: 0 auto;
+
+        body {
+          background: linear-gradient(to bottom right, #2b5876, #4e4376);
+          color: white;
+          min-height: 100vh;
           display: flex;
-          gap: 24px;
+          flex-direction: column;
+          align-items: center;
+          padding: 20px 0;
+        }
+
+        /* Header/Nav */
+        header {
+          background: linear-gradient(90deg, #0072ff, #00c6ff);
+          padding: 12px 0;
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+          position: sticky;
+          top: 0;
+          width: 100%;
+          z-index: 100;
+          display: flex;
           justify-content: center;
+          align-items: center;
         }
-        nav a {
-          color: #e1e8f0;
-          text-decoration: none;
-          font-weight: 600;
-          font-size: 1.1rem;
-          padding: 8px 14px;
-          border-radius: 6px;
-          transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-          background-color: rgba(225, 232, 240, 0.5);
-        }
-        nav a.active {
-          background-color: #e1e8f0;
-          color: #004a99;
-          cursor: default;
-        }
-        main.container {
-          max-width: 700px;
-          margin: 0 auto 50px auto;
-          padding: 24px 32px;
-          background: white;
-          border-radius: 12px;
-          box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-          color: #333;
-        }
-        h1 {
-          color: #00509e;
-          margin-top: 0;
-          margin-bottom: 1rem;
+
+        nav {
+          display: flex;
+          gap: 28px;
           font-weight: 700;
+          font-size: 1.1rem;
+          max-width: 700px;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
         }
-        p {
+
+        nav a {
+          color: white;
+          text-decoration: none;
+          padding: 10px 20px;
+          border-radius: 30px;
+          transition: background-color 0.3s ease, transform 0.2s ease;
+          user-select: none;
+        }
+
+        nav a:hover {
+          background-color: rgba(255, 255, 255, 0.3);
+          transform: scale(1.1);
+        }
+
+        nav a.active {
+          background-color: white;
+          color: #0072ff;
+          cursor: default;
+          box-shadow: 0 0 8px #00c6ffaa;
+          transform: scale(1.15);
+        }
+
+        /* Main content container */
+        main.container {
+          background: rgba(255, 255, 255, 0.05);
+          border-radius: 20px;
+          padding: 30px 40px;
+          width: 90%;
+          max-width: 700px;
+          backdrop-filter: blur(10px);
+          box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+          margin-top: 30px;
+          text-align: left;
           line-height: 1.6;
-          font-size: 1rem;
-          margin-bottom: 1.2rem;
         }
+
+        /* Headings */
+        h1 {
+          color: #00c6ff;
+          margin-bottom: 24px;
+          font-weight: 700;
+          font-size: 2.4rem;
+        }
+
+        /* Paragraph text */
+        p {
+          font-size: 1.05rem;
+          color: #dcefff;
+          margin-bottom: 1.3rem;
+        }
+
+        /* Highlight strong text */
         strong {
-          color: #1a73e8;
-          font-weight: 600;
+          color: #00aaff;
+          font-weight: 700;
           text-decoration: underline dotted;
+        }
+
+        em {
+          font-style: italic;
+          color: #66d9ff;
+        }
+
+        /* Responsive tweaks */
+        @media (max-width: 480px) {
+          main.container {
+            padding: 20px 20px;
+            width: 95%;
+          }
+
+          nav {
+            gap: 16px;
+            font-size: 1rem;
+          }
+
+          nav a {
+            padding: 8px 14px;
+          }
         }
     </style>
 </head>
@@ -73,6 +133,7 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="whatsapp.html">Whatsapp</a>
         <a href="docs.html">Docs</a>
         <a href="about.html" class="active">About</a>
     </nav>
@@ -84,19 +145,19 @@
         The <strong>Summarizer</strong> is a cutting-edge web application built to help users efficiently transform verbose and complex event descriptions into short, clear, and essential summaries. This ensures that busy organizers, attendees, and event planners can quickly grasp the core details without wading through unnecessary information.
     </p>
     <p>
-        This tool leverages the powerful <strong>Ollama AI platform</strong> featuring the <em>LLaMA 2</em> language model, integrated via a robust Java Spring Boot backend. The frontend is crafted with standard web technologies—HTML, CSS, and JavaScript—to ensure an intuitive and responsive user experience.
+        This tool leverages the powerful <strong>Ollama AI platform</strong> featuring the <em>LLaMA 2</em> language model, integrated via a robust Java Spring Boot backend. The frontend is crafted with standard web technologies — HTML, CSS, and JavaScript — to ensure an intuitive and responsive user experience.
     </p>
     <p>
         This project was developed as a personal passion initiative by <strong>Vedavyaas M R</strong>, focusing on exploring the intersection of AI-powered natural language processing and web-based utility tools. The goal was to create a lightweight, easy-to-use solution that could be accessible to a broad audience, including event organizers, marketing professionals, and casual users.
     </p>
     <p>
-        The Summarizer supports multiple input types and is optimized to handle complex and lengthy event texts. It extracts only the most relevant elements—such as event name, date, venue, contact details, and a brief description—rendering them in a clear, bullet-point format that can be quickly scanned and shared.
+        The Summarizer supports multiple input types and is optimized to handle complex and lengthy event texts. It extracts only the most relevant elements — such as event name, date, venue, contact details, and a brief description — rendering them in a clear, bullet-point format that can be quickly scanned and shared.
     </p>
     <p>
         Looking ahead, the project is designed to be extensible. Potential features include multi-language support, enhanced summary customization options, and integration with popular calendar and event management platforms.
     </p>
     <p>
-        We hope this tool empowers users to save time, reduce information overload, and communicate event information more effectively.
+        I hope this tool empowers users to save time, reduce information overload, and communicate event information more effectively.
     </p>
 </main>
 </body>
