--- a/Frontend-Summarizer/docs.html
+++ b/Frontend-Summarizer/docs.html
@@ -5,84 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Documentation - Summarizer</title>
     <style>
-        body {
+        /* Reset and base */
+        * {
+          box-sizing: border-box;
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           margin: 0;
           padding: 0;
-          background: #f5f7fa;
-          color: #444;
         }
-        header {
-          background: #0078d7;
-          padding: 12px 0;
-          box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-          margin-bottom: 30px;
-        }
-        nav {
-          max-width: 700px;
-          margin: 0 auto;
+
+        body {
+          background: linear-gradient(to bottom right, #2b5876, #4e4376);
+          color: white;
+          min-height: 100vh;
           display: flex;
-          gap: 24px;
+          flex-direction: column;
+          align-items: center;
+          padding: 20px 0;
+        }
+
+        /* Header/Nav */
+        header {
+          background: linear-gradient(90deg, #0072ff, #00c6ff);
+          padding: 12px 0;
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+          position: sticky;
+          top: 0;
+          width: 100%;
+          z-index: 100;
+          display: flex;
           justify-content: center;
+          align-items: center;
         }
-        nav a {
-          color: #e1e8f0;
-          text-decoration: none;
-          font-weight: 600;
+
+        nav {
+          display: flex;
+          gap: 28px;
+          font-weight: 700;
           font-size: 1.1rem;
-          padding: 8px 14px;
-          border-radius: 6px;
-          transition: background-color 0.3s ease;
-        }
-        nav a:hover {
-          background-color: rgba(225, 232, 240, 0.5);
-        }
-        nav a.active {
-          background-color: #e1e8f0;
-          color: #004a99;
-          cursor: default;
-        }
-        main.container {
           max-width: 700px;
-          margin: 0 auto 50px auto;
-          padding: 24px 32px;
-          background: white;
-          border-radius: 12px;
-          box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-          color: #333;
+          width: 100%;
+          justify-content: center;
+          align-items: center;
         }
+
+        nav a {
+          color: white;
+          text-decoration: none;
+          padding: 10px 20px;
+          border-radius: 30px;
+          transition: background-color 0.3s ease, transform 0.2s ease;
+          user-select: none;
+        }
+
+        nav a:hover {
+          background-color: rgba(255, 255, 255, 0.3);
+          transform: scale(1.1);
+        }
+
+        nav a.active {
+          background-color: white;
+          color: #0072ff;
+          cursor: default;
+          box-shadow: 0 0 8px #00c6ffaa;
+          transform: scale(1.15);
+        }
+
+        /* Main content container */
+        main.container {
+          background: rgba(255, 255, 255, 0.05);
+          border-radius: 20px;
+          padding: 30px 40px;
+          width: 90%;
+          max-width: 700px;
+          backdrop-filter: blur(10px);
+          box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+          margin-top: 30px;
+          text-align: left;
+          line-height: 1.6;
+        }
+
+        /* Headings */
         h1 {
-          color: #00509e;
-          margin-top: 0;
-          margin-bottom: 1rem;
+          color: #00c6ff;
+          margin-bottom: 24px;
+          font-weight: 700;
+          font-size: 2.4rem;
+        }
+
+        h2 {
+          margin-top: 2.5rem;
+          color: #00aaff;
+          border-bottom: 2px solid #00aaff;
+          padding-bottom: 6px;
           font-weight: 700;
         }
+
+        /* Paragraph text */
         p {
-          line-height: 1.6;
-          font-size: 1rem;
-          margin-bottom: 1.2rem;
+          font-size: 1.05rem;
+          color: #dcefff;
+          margin-bottom: 1.3rem;
         }
+
+        /* Lists */
+        ul {
+          padding-left: 24px;
+          margin-bottom: 1.5rem;
+          color: #c9eaff;
+        }
+
+        li {
+          margin-bottom: 0.7rem;
+          font-size: 1.05rem;
+        }
+
+        /* Highlights */
         strong {
-          color: #1a73e8;
-          font-weight: 600;
+          color: #00aaff;
+          font-weight: 700;
           text-decoration: underline dotted;
         }
-        ul {
-          margin-top: 0;
-          margin-bottom: 1.5rem;
-          padding-left: 20px;
-          color: #333;
-        }
-        li {
-          margin-bottom: 0.6rem;
-          font-size: 1rem;
-          line-height: 1.5;
-        }
-        h2 {
-          margin-top: 2rem;
-          color: #0078d7;
-          border-bottom: 2px solid #0078d7;
-          padding-bottom: 6px;
+
+        /* Responsive */
+        @media (max-width: 480px) {
+          main.container {
+            padding: 20px 20px;
+            width: 95%;
+          }
+
+          nav {
+            gap: 16px;
+            font-size: 1rem;
+          }
+
+          nav a {
+            padding: 8px 14px;
+          }
         }
     </style>
 </head>
@@ -90,6 +148,7 @@
 <header>
     <nav>
         <a href="index.html">Home</a>
+        <a href="whatsapp.html">Whatsapp</a>
         <a href="docs.html" class="active">Docs</a>
         <a href="about.html">About</a>
     </nav>
@@ -98,36 +157,28 @@
 <main class="container">
     <h1>Documentation Overview</h1>
     <p>
-        Welcome to the official documentation for the Event Summarizer project. This document provides detailed information on how the application works, how to use it effectively, and insights into its core components and technologies.
+        Welcome to the official documentation for the Summarizer project. This document provides detailed information on how the application works, how to use it effectively, and insights into its core components and technologies.
     </p>
-    <p>
-        <strong>Key Features:</strong>
-    </p>
+    <p><strong>Key Features:</strong></p>
     <ul>
-        <li><strong>Natural Language Processing:</strong> Powered by the Ollama AI platform with LLaMA 2, the Summarizer uses advanced machine learning to extract relevant details from long, complex event descriptions.</li>
+        <li><strong>Natural Language Processing:</strong> Powered by the Ollama AI platform with LLaMA 2, the Summarizer uses advanced machine learning to extract relevant details from long, complex descriptions.</li>
         <li><strong>Backend Framework:</strong> The backend is developed using Java Spring Boot, providing a robust API that the frontend communicates with securely and efficiently.</li>
         <li><strong>Frontend Design:</strong> The user interface is built with clean HTML, CSS, and JavaScript to provide a simple, intuitive experience for inputting event text and receiving concise summaries.</li>
         <li><strong>Extensibility:</strong> The architecture supports future enhancements such as multi-language support, custom summarization options, and integration with external event management tools.</li>
-        <li><strong>Upcoming Feature:</strong> Planned integration for WhatsApp message summarization, enabling users to summarize long message threads directly within WhatsApp groups for easier reading and sharing.</li>
+        <li><strong>Upcoming Feature:</strong> Planned integration for WhatsApp group message summarization, enabling users to summarize long message threads directly within WhatsApp groups for easier reading and sharing.</li>
     </ul>
-    <p>
-        <strong>Using the Application:</strong> To use the Summarizer, simply paste the full event details into the text area on the home page, then click the "Summarize" button. The AI will process the input and return a summary that includes the event name, date, venue, contacts, and a brief description.
-    </p>
-    <p>
-        <strong>Technical Notes:</strong> The AI processing is performed via the Ollama API running locally or remotely, depending on your configuration. The Java backend handles prompt preparation and API communication, while the frontend handles user interaction and display.
-    </p>
+    <p><strong>Using the Application:</strong> To use the Summarizer, simply paste the full description into the text area on the home page, then click the "Summarize" button. The AI will process the input and return a brief description.</p>
+    <p><strong>Technical Notes:</strong> The AI processing is performed via the Ollama API running locally or remotely, depending on your configuration. The Java backend handles prompt preparation and API communication, while the frontend handles user interaction and display.The app also integrates WhatsApp messaging via Twilio’s webhook; incoming WhatsApp messages are summarized by the AI backend and stored in a database, with responses sent back automatically and accessible through the web frontend.</p>
     <h2>Known Defects and Limitations</h2>
     <ul>
-        <li>Occasional inaccuracies in summarization when event descriptions are extremely complex or use uncommon terminology.</li>
+        <li>Occasional inaccuracies in summarization when descriptions are extremely complex or use uncommon terminology.</li>
         <li>Limited support for languages other than English; non-English inputs may produce suboptimal summaries.</li>
         <li>Dependency on local or network availability of the Ollama LLaMA 2 model; if the AI backend is down, summarization will fail.</li>
         <li>The summarizer sometimes struggles to perfectly differentiate between event descriptions and legal text such as terms and conditions, leading to less precise outputs for non-event inputs.</li>
         <li>Currently, there is no user authentication or data privacy safeguards for inputted text; all inputs are processed directly by the backend AI.</li>
         <li>Summaries are limited to approximately 30 words which may omit some minor but relevant details.</li>
     </ul>
-    <p>
-        These limitations are actively being addressed in future versions to improve accuracy, expand language support, and enhance security.
-    </p>
+    <p>These limitations are actively being addressed in future versions to improve accuracy, expand language support, and enhance security.</p>
 </main>
 </body>
 </html>
