--- a/Frontend-Summarizer/index.html
+++ b/Frontend-Summarizer/index.html
@@ -10,6 +10,7 @@
 <header>
     <nav>
         <a href="index.html" class="active">Home</a>
+        <a href="whatsapp.html">Whatsapp</a>
         <a href="docs.html">Docs</a>
         <a href="about.html">About</a>
     </nav>
